Items can now be added via the input box

--- a/views/todo-list.html
+++ b/views/todo-list.html
@@ -6,10 +6,7 @@
     <link href="styles/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <form id="todo-list-input">
-      To Do: <input type="text" name="task">
-      <input type="submit" value="Add item to todo-list">
-    </form>
+    To Do: <input type="text" name="task" id="task">
     <ul id="list"></ul>
     <button onclick="extractFormValues()" id="try">Try it</button>
     <p id="demo"></p>
