Allow for renaming and deleting

--- a/views/todo-list.html
+++ b/views/todo-list.html
@@ -4,6 +4,13 @@
     <meta charset="utf-8">
     <title>Todo-list</title>
     <link href="styles/style.css" rel="stylesheet" type="text/css">
+    <style>
+      .checked{
+        text-decoration: line-through;
+        font-weight: bold;
+        color: #c00;
+      }
+    </style>
   </head>
   <body>
     To Do: <input type="text" name="task" id="task">
